// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WifiSummaryTable rendering a simple wifi summary table 1`] = `
<DocumentFragment>
  <ion-grid>
    <ion-row>
      <ion-col>
        <ion-text>
          Network Name
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Signal Strength
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          Test Wifi 1
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          3
        </ion-text>
      </ion-col>
    </ion-row>
    <ion-row>
      <ion-col>
        <ion-text>
          Test Wifi 4
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          2
        </ion-text>
      </ion-col>
    </ion-row>
  </ion-grid>
</DocumentFragment>
`;

exports[`WifiSummaryTable rendering a wifi summary table without wifi summary 1`] = `
<DocumentFragment>
  <ion-grid>
    <ion-row>
      <ion-col>
        <ion-text>
          Network Name
        </ion-text>
      </ion-col>
      <ion-col>
        <ion-text>
          Signal Strength
        </ion-text>
      </ion-col>
    </ion-row>
  </ion-grid>
</DocumentFragment>
`;
